fix: gap space

--- a/src/views/Drawer/drawer.module.css
+++ b/src/views/Drawer/drawer.module.css
@@ -32,8 +32,14 @@
   }
 }
 
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+
 .button {
-  margin: 0 16px 16px 0;
+  margin: 0;
 }
 
 .left {
