--- a/src/views/Dropdown/dropdown.module.css
+++ b/src/views/Dropdown/dropdown.module.css
@@ -1,10 +1,11 @@
 .wrapper {
   display: flex;
   flex-wrap: wrap;
+  gap: 16px;
 }
 
 .inner {
-  margin: 0 16px 16px 0;
+  margin: 0;
 }
 
 .button {
